@@ -18,6 +18,8 @@ cdebconf (0.76) UNRELEASED; urgency=low
       that we can do 'debconf-copydb -p foo/bar configdb target_configdb'
       once the base system is installed.
     - Remove src/cdebconf.conf-dist on distclean.
+    - Fix some of the build issues with the corba frontend, although it
+      still doesn't even remotely build or work.
   * Matthias Urlichs:
     - Clarify ANS: lines in test.config output.
     - Set _cmdline::frontend rather than frontend::default::driver in
